--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bet365",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://nicowr94.github.io/bet365/buid",
+  "homepage":"https://nicowr94.github.io/bet365",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
